lib/lago_formula.tt
grammar LagoFormula

  rule formula
    function / expression / variable / string
  end

  rule function
    function_name "(" function_args ")" {
      def evaluate(context)
        function_name.apply(*function_args.evaluate(context))
      end
    }
  end

  rule variable
    val:([a-z] [a-zA-Z0-9_]*) {
      def evaluate(context)
        context.fetch(val.text_value)
      end
    }
  end

  rule string
    "'" val:(!"'" .)* "'" {
      def evaluate(context)
        val.text_value
      end
    }
  end

  rule function_name
    'ceil' {
      def apply(a)
        a.ceil
      end
    }
    /
    'concat' {
      def apply(*args)
        args.map(&:to_s).reduce(&:+)
      end
    }
    /
    'round' {
      def apply(a,b)
        a.round(b)
      end
    }
  end

  rule function_args
    space head:formula space tail:("," space formula space)* {
      def evaluate(context)
        [head.evaluate(context)] + tail.elements.map {|e| e.formula.evaluate(context)}
      end
    }
  end

  rule expression
    additive
  end

  rule additive
    head:multitive
    tail:(
      space operator:additive_op
      space operand:multitive)* <BinaryOperation>
  end

  rule additive_op
    '+' {
      def apply(a, b)
        a + b
      end
    }
    /
    '-' {
      def apply(a, b)
        a - b
      end
    }
  end

  rule multitive
    head:primary
    tail:(
      space operator:multitive_op
      space operand:primary)* <BinaryOperation>
  end

  rule multitive_op
    '*' {
      def apply(a, b)
        a * b
      end
    }
    /
    '/' {
      def apply(a, b)
        a / b
      end
    }
  end

  rule primary
    variable
    /
    number
    /
    '(' space expression space ')' {
      def evaluate(context={})
        expression.evaluate(context)
      end
    }
  end

  rule number
    ([1-9] [0-9]* / '0') {
      def evaluate(context={})
        text_value.to_d
      end
    }
  end

  rule space
    ' '*
  end

end
